welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:3: error: ';' expected but integer literal found.
  return a/10 ==b/10 || a/10 b%10  || a%10 ==b/10 || a%10==b%10
                               ^